[package]
name = "lightcycle"
version = "0.1.0"
edition = "2021"
authors = ["C J Silverio <ceejceej@gmail.com>"]
description = "A consistent hash ring using blake3."
readme = "README.md"
license = "BlueOak-1.0.0"
repository = "https://github.com/ceejbot/lightcycle"
homepage = "https://github.com/ceejbot/lightcycle"

[dependencies]
blake3 = "1.3.3"

[dev-dependencies]
once_cell = "1.17.0"
